--- a/content/test.mdx
+++ b/content/test.mdx
@@ -38,7 +38,7 @@ I removed the following libraries:
 
 I was still able to maintain almost all of my content requirements with not much code. For example, here's how I'm able to retrieve all of my blog posts:
 
-```js
+```tsx title="code.tsx"
 import fs from 'fs';
 import path from 'path';
 
